exported feq ranks to csv

--- a/word_works.ipynb
+++ b/word_works.ipynb
@@ -326,27 +326,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "813.0"
-      ]
-     },
-     "execution_count": 139,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "check_word = input()\n",
-    "freq_ranking(check_word)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
    "outputs": [],
@@ -457,10 +436,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_word_ranks.to_csv('word_ranks')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "slate\n",
+      "1569.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (df_word_ranks['word'][df_word_ranks['value'].idxmax()])\n",
+    "print (df_word_ranks['value'][df_word_ranks['value'].idxmax()])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# here we determine the next best word based on results of the best word per wordle feedback"
+   ]
   }
  ],
  "metadata": {
