--- a/word_works.ipynb
+++ b/word_works.ipynb
@@ -464,12 +464,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>word</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>llama</td>\n",
+       "      <td>813.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>monad</td>\n",
+       "      <td>895.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>madam</td>\n",
+       "      <td>789.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>annoy</td>\n",
+       "      <td>902.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>proud</td>\n",
+       "      <td>876.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2464</th>\n",
+       "      <td>franc</td>\n",
+       "      <td>963.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2466</th>\n",
+       "      <td>opium</td>\n",
+       "      <td>502.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2467</th>\n",
+       "      <td>utile</td>\n",
+       "      <td>993.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2468</th>\n",
+       "      <td>cream</td>\n",
+       "      <td>941.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2469</th>\n",
+       "      <td>cheat</td>\n",
+       "      <td>1052.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1780 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       word   value\n",
+       "0     llama   813.0\n",
+       "2     monad   895.0\n",
+       "3     madam   789.0\n",
+       "4     annoy   902.0\n",
+       "6     proud   876.0\n",
+       "...     ...     ...\n",
+       "2464  franc   963.0\n",
+       "2466  opium   502.0\n",
+       "2467  utile   993.0\n",
+       "2468  cream   941.0\n",
+       "2469  cheat  1052.0\n",
+       "\n",
+       "[1780 rows x 2 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# here we determine the next best word based on results of the best word per wordle feedback\n",
+    "# how to determine which items were elimiated\n",
+    "display(df_word_ranks.loc[(~df_word_ranks['word'].str.contains('s'))])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# here we determine the next best word based on results of the best word per wordle feedback"
-   ]
+   "source": []
   }
  ],
  "metadata": {
