--- a/word_works.ipynb
+++ b/word_works.ipynb
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -499,6 +499,11 @@
        "      <td>813.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>chaos</td>\n",
+       "      <td>924.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>monad</td>\n",
        "      <td>895.0</td>\n",
@@ -514,14 +519,14 @@
        "      <td>902.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>proud</td>\n",
-       "      <td>876.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2463</th>\n",
+       "      <td>marsh</td>\n",
+       "      <td>978.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2464</th>\n",
@@ -529,45 +534,40 @@
        "      <td>963.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2465</th>\n",
+       "      <td>swank</td>\n",
+       "      <td>1086.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2466</th>\n",
        "      <td>opium</td>\n",
        "      <td>502.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2467</th>\n",
-       "      <td>utile</td>\n",
-       "      <td>993.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2468</th>\n",
        "      <td>cream</td>\n",
        "      <td>941.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2469</th>\n",
-       "      <td>cheat</td>\n",
-       "      <td>1052.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1780 rows × 2 columns</p>\n",
+       "<p>1741 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       word   value\n",
        "0     llama   813.0\n",
+       "1     chaos   924.0\n",
        "2     monad   895.0\n",
        "3     madam   789.0\n",
        "4     annoy   902.0\n",
-       "6     proud   876.0\n",
        "...     ...     ...\n",
+       "2463  marsh   978.0\n",
        "2464  franc   963.0\n",
+       "2465  swank  1086.0\n",
        "2466  opium   502.0\n",
-       "2467  utile   993.0\n",
        "2468  cream   941.0\n",
-       "2469  cheat  1052.0\n",
        "\n",
-       "[1780 rows x 2 columns]"
+       "[1741 rows x 2 columns]"
       ]
      },
      "metadata": {},
@@ -577,7 +577,175 @@
    "source": [
     "# here we determine the next best word based on results of the best word per wordle feedback\n",
     "# how to determine which items were elimiated\n",
-    "display(df_word_ranks.loc[(~df_word_ranks['word'].str.contains('s'))])"
+    "#  ~ before a contains statement makes it a \"not\" I was lucky to find this\n",
+    "display(df_word_ranks.loc[(~df_word_ranks['word'].str.contains('t'))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "238"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_sub.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grey = ['s','l','a','t','e']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n",
+      "2470\n",
+      "l\n",
+      "1780\n",
+      "a\n",
+      "1240\n",
+      "t\n",
+      "738\n",
+      "e\n",
+      "495\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>word</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>proud</td>\n",
+       "      <td>876.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>drunk</td>\n",
+       "      <td>861.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>bring</td>\n",
+       "      <td>954.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>crook</td>\n",
+       "      <td>999.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>rough</td>\n",
+       "      <td>810.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2442</th>\n",
+       "      <td>horny</td>\n",
+       "      <td>1134.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2447</th>\n",
+       "      <td>mimic</td>\n",
+       "      <td>612.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2453</th>\n",
+       "      <td>crumb</td>\n",
+       "      <td>757.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2459</th>\n",
+       "      <td>chunk</td>\n",
+       "      <td>873.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2466</th>\n",
+       "      <td>opium</td>\n",
+       "      <td>502.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>238 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       word   value\n",
+       "6     proud   876.0\n",
+       "8     drunk   861.0\n",
+       "13    bring   954.0\n",
+       "18    crook   999.0\n",
+       "19    rough   810.0\n",
+       "...     ...     ...\n",
+       "2442  horny  1134.0\n",
+       "2447  mimic   612.0\n",
+       "2453  crumb   757.0\n",
+       "2459  chunk   873.0\n",
+       "2466  opium   502.0\n",
+       "\n",
+       "[238 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sub = df_word_ranks\n",
+    "for l in grey:\n",
+    "    print(l)\n",
+    "    print(str(len(df_sub.index)))\n",
+    "    df_sub = (df_sub.loc[(~df_sub['word'].str.contains(l))])\n",
+    "df_sub"
    ]
   },
   {
@@ -585,7 +753,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print (df_word_ranks['word'][df_word_ranks['value'].idxmax()])\n",
+    "print (df_word_ranks['value'][df_word_ranks['value'].idxmax()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_grey(grey,df):\n",
+    "    df_sub = df\n",
+    "    for l in grey:\n",
+    "        df_sub = (df_word_ranks.loc[(~df_word_ranks['word'].str.contains('s'))])\n"
+   ]
   }
  ],
  "metadata": {
