--- a/word_works.ipynb
+++ b/word_works.ipynb
@@ -750,12 +750,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "crony\n",
+      "1308.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (df_sub['word'][df_sub['value'].idxmax()])\n",
+    "print (df_sub['value'][df_sub['value'].idxmax()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print (df_word_ranks['word'][df_word_ranks['value'].idxmax()])\n",
-    "print (df_word_ranks['value'][df_word_ranks['value'].idxmax()])"
+    "def remove_grey(grey,df):\n",
+    "    df_sub = df\n",
+    "    for l in grey:\n",
+    "        print(l)\n",
+    "        print(str(len(df_sub.index)))\n",
+    "        df_sub = (df_sub.loc[(~df_sub['word'].str.contains(l))])\n",
+    "    return df_sub"
    ]
   },
   {
@@ -764,10 +788,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_grey(grey,df):\n",
-    "    df_sub = df\n",
-    "    for l in grey:\n",
-    "        df_sub = (df_word_ranks.loc[(~df_word_ranks['word'].str.contains('s'))])\n"
+    "grey = input()\n",
+    "remove_grey(grey,df_sub)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# working on location based eliminations\n"
    ]
   }
  ],
