--- a/word_works.ipynb
+++ b/word_works.ipynb
@@ -773,7 +773,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_grey(grey,df):\n",
+    "def remove_notcontains(grey,df):\n",
     "    df_sub = df\n",
     "    for l in grey:\n",
     "        print(l)\n",
@@ -788,8 +788,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grey = input()\n",
-    "remove_grey(grey,df_sub)"
+    "def remove_by_location(loc,letter,df):\n",
+    "    df_sub = df\n",
+    "    for l in grey:\n",
+    "        print(l)\n",
+    "        print(str(len(df_sub.index)))\n",
+    "        df_sub = (df_reduce.loc[(df_reduce['word'].str[1]== 'r')])\n",
+    "    return df_sub"
    ]
   },
   {
@@ -798,8 +803,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# working on location based eliminations\n"
+    "def remove_by_contains(loc,letter,df):\n",
+    "    df_sub = df\n",
+    "    for l in grey:\n",
+    "        print(l)\n",
+    "        print(str(len(df_sub.index)))\n",
+    "        df_sub = (df_sub.loc[(df_sub['word'].str.contains(l))])\n",
+    "    return df_sub"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n",
+      "238\n"
+     ]
+    }
+   ],
+   "source": [
+    "grey = input()\n",
+    "df_reduce = remove_notcontains(grey,df_sub)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "slate\n",
+      "slate\n",
+      "cr\n",
+      "r,2\n",
+      "crony\n",
+      "win\n",
+      "win'\n",
+      "win\n",
+      "win\n",
+      "win\n",
+      "win\n",
+      "win\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make the testing loop\n",
+    "word =''\n",
+    "while word != 'win':\n",
+    "    word = input('enter your guess:')\n",
+    "    not_char = input('enter eliminated letters:[l,e,t,t,e,r]')\n",
+    "    is_char = input('enter confirmed letters:[y,e,s]')\n",
+    "    confirmed_locs = input('enter confirmed locations: [letter,location]')\n",
+    "    print(word)\n",
+    "    print(not_char)\n",
+    "    print(is_char)\n",
+    "    print(confirmed_locs)\n",
+    "    next_best = (df_sub['word'][df_sub['value'].idxmax()])\n",
+    "    print(next_best)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
