--- a/word_works.ipynb
+++ b/word_works.ipynb
@@ -103,48 +103,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>culpa</td>\n",
-       "      <td>c</td>\n",
+       "      <td>purge</td>\n",
+       "      <td>p</td>\n",
        "      <td>u</td>\n",
-       "      <td>l</td>\n",
-       "      <td>p</td>\n",
-       "      <td>a</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>smash</td>\n",
-       "      <td>s</td>\n",
-       "      <td>m</td>\n",
-       "      <td>a</td>\n",
-       "      <td>s</td>\n",
-       "      <td>h</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>picky</td>\n",
-       "      <td>p</td>\n",
-       "      <td>i</td>\n",
-       "      <td>c</td>\n",
-       "      <td>k</td>\n",
-       "      <td>y</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>horse</td>\n",
-       "      <td>h</td>\n",
-       "      <td>o</td>\n",
        "      <td>r</td>\n",
-       "      <td>s</td>\n",
+       "      <td>g</td>\n",
        "      <td>e</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>adapt</td>\n",
-       "      <td>a</td>\n",
-       "      <td>d</td>\n",
-       "      <td>a</td>\n",
-       "      <td>p</td>\n",
+       "      <th>1</th>\n",
+       "      <td>until</td>\n",
+       "      <td>u</td>\n",
+       "      <td>n</td>\n",
        "      <td>t</td>\n",
+       "      <td>i</td>\n",
+       "      <td>l</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>gulch</td>\n",
+       "      <td>g</td>\n",
+       "      <td>u</td>\n",
+       "      <td>l</td>\n",
+       "      <td>c</td>\n",
+       "      <td>h</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>borax</td>\n",
+       "      <td>b</td>\n",
+       "      <td>o</td>\n",
+       "      <td>r</td>\n",
+       "      <td>a</td>\n",
+       "      <td>x</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>solar</td>\n",
+       "      <td>s</td>\n",
+       "      <td>o</td>\n",
+       "      <td>l</td>\n",
+       "      <td>a</td>\n",
+       "      <td>r</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -152,11 +152,11 @@
       ],
       "text/plain": [
        "   words first second third fourth fifth\n",
-       "0  culpa     c      u     l      p     a\n",
-       "1  smash     s      m     a      s     h\n",
-       "2  picky     p      i     c      k     y\n",
-       "3  horse     h      o     r      s     e\n",
-       "4  adapt     a      d     a      p     t"
+       "0  purge     p      u     r      g     e\n",
+       "1  until     u      n     t      i     l\n",
+       "2  gulch     g      u     l      c     h\n",
+       "3  borax     b      o     r      a     x\n",
+       "4  solar     s      o     l      a     r"
       ]
      },
      "execution_count": 6,
@@ -389,28 +389,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>culpa</td>\n",
-       "      <td>723.0</td>\n",
+       "      <td>purge</td>\n",
+       "      <td>1108.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>smash</td>\n",
-       "      <td>1105.0</td>\n",
+       "      <td>until</td>\n",
+       "      <td>588.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>picky</td>\n",
-       "      <td>859.0</td>\n",
+       "      <td>gulch</td>\n",
+       "      <td>785.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>horse</td>\n",
-       "      <td>1217.0</td>\n",
+       "      <td>borax</td>\n",
+       "      <td>911.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>adapt</td>\n",
-       "      <td>840.0</td>\n",
+       "      <td>solar</td>\n",
+       "      <td>1178.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -418,11 +418,11 @@
       ],
       "text/plain": [
        "    word   value\n",
-       "0  culpa   723.0\n",
-       "1  smash  1105.0\n",
-       "2  picky   859.0\n",
-       "3  horse  1217.0\n",
-       "4  adapt   840.0"
+       "0  purge  1108.0\n",
+       "1  until   588.0\n",
+       "2  gulch   785.0\n",
+       "3  borax   911.0\n",
+       "4  solar  1178.0"
       ]
      },
      "execution_count": 15,
@@ -495,28 +495,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>culpa</td>\n",
-       "      <td>723.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>smash</td>\n",
-       "      <td>1105.0</td>\n",
+       "      <td>purge</td>\n",
+       "      <td>1108.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>picky</td>\n",
-       "      <td>859.0</td>\n",
+       "      <td>gulch</td>\n",
+       "      <td>785.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>horse</td>\n",
-       "      <td>1217.0</td>\n",
+       "      <td>borax</td>\n",
+       "      <td>911.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>belle</td>\n",
-       "      <td>1222.0</td>\n",
+       "      <th>4</th>\n",
+       "      <td>solar</td>\n",
+       "      <td>1178.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>elbow</td>\n",
+       "      <td>496.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -524,29 +524,29 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2464</th>\n",
-       "      <td>rowdy</td>\n",
-       "      <td>861.0</td>\n",
+       "      <th>2465</th>\n",
+       "      <td>gland</td>\n",
+       "      <td>970.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2466</th>\n",
-       "      <td>kinky</td>\n",
-       "      <td>822.0</td>\n",
+       "      <td>whiff</td>\n",
+       "      <td>583.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2467</th>\n",
-       "      <td>croon</td>\n",
-       "      <td>1028.0</td>\n",
+       "      <td>waxen</td>\n",
+       "      <td>834.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2468</th>\n",
-       "      <td>shirk</td>\n",
-       "      <td>1126.0</td>\n",
+       "      <td>verge</td>\n",
+       "      <td>1046.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2469</th>\n",
-       "      <td>guile</td>\n",
-       "      <td>1216.0</td>\n",
+       "      <td>sough</td>\n",
+       "      <td>1126.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -555,17 +555,17 @@
       ],
       "text/plain": [
        "       word   value\n",
-       "0     culpa   723.0\n",
-       "1     smash  1105.0\n",
-       "2     picky   859.0\n",
-       "3     horse  1217.0\n",
-       "6     belle  1222.0\n",
+       "0     purge  1108.0\n",
+       "2     gulch   785.0\n",
+       "3     borax   911.0\n",
+       "4     solar  1178.0\n",
+       "5     elbow   496.0\n",
        "...     ...     ...\n",
-       "2464  rowdy   861.0\n",
-       "2466  kinky   822.0\n",
-       "2467  croon  1028.0\n",
-       "2468  shirk  1126.0\n",
-       "2469  guile  1216.0\n",
+       "2465  gland   970.0\n",
+       "2466  whiff   583.0\n",
+       "2467  waxen   834.0\n",
+       "2468  verge  1046.0\n",
+       "2469  sough  1126.0\n",
        "\n",
        "[1741 rows x 2 columns]"
       ]
@@ -638,29 +638,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>picky</td>\n",
-       "      <td>859.0</td>\n",
+       "      <th>7</th>\n",
+       "      <td>dingy</td>\n",
+       "      <td>922.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>prior</td>\n",
-       "      <td>961.0</td>\n",
+       "      <th>8</th>\n",
+       "      <td>wormy</td>\n",
+       "      <td>1025.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>foggy</td>\n",
-       "      <td>970.0</td>\n",
+       "      <th>15</th>\n",
+       "      <td>corny</td>\n",
+       "      <td>1282.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>gizmo</td>\n",
-       "      <td>485.0</td>\n",
+       "      <th>66</th>\n",
+       "      <td>dough</td>\n",
+       "      <td>834.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>occur</td>\n",
-       "      <td>368.0</td>\n",
+       "      <th>89</th>\n",
+       "      <td>buxom</td>\n",
+       "      <td>614.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -668,29 +668,29 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2451</th>\n",
-       "      <td>windy</td>\n",
-       "      <td>884.0</td>\n",
+       "      <th>2427</th>\n",
+       "      <td>myrrh</td>\n",
+       "      <td>681.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2458</th>\n",
-       "      <td>fuzzy</td>\n",
-       "      <td>752.0</td>\n",
+       "      <th>2429</th>\n",
+       "      <td>privy</td>\n",
+       "      <td>1112.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2464</th>\n",
-       "      <td>rowdy</td>\n",
-       "      <td>861.0</td>\n",
+       "      <th>2433</th>\n",
+       "      <td>wound</td>\n",
+       "      <td>868.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2440</th>\n",
+       "      <td>chunk</td>\n",
+       "      <td>873.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2466</th>\n",
-       "      <td>kinky</td>\n",
-       "      <td>822.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2467</th>\n",
-       "      <td>croon</td>\n",
-       "      <td>1028.0</td>\n",
+       "      <td>whiff</td>\n",
+       "      <td>583.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -699,17 +699,17 @@
       ],
       "text/plain": [
        "       word   value\n",
-       "2     picky   859.0\n",
-       "21    prior   961.0\n",
-       "23    foggy   970.0\n",
-       "40    gizmo   485.0\n",
-       "42    occur   368.0\n",
+       "7     dingy   922.0\n",
+       "8     wormy  1025.0\n",
+       "15    corny  1282.0\n",
+       "66    dough   834.0\n",
+       "89    buxom   614.0\n",
        "...     ...     ...\n",
-       "2451  windy   884.0\n",
-       "2458  fuzzy   752.0\n",
-       "2464  rowdy   861.0\n",
-       "2466  kinky   822.0\n",
-       "2467  croon  1028.0\n",
+       "2427  myrrh   681.0\n",
+       "2429  privy  1112.0\n",
+       "2433  wound   868.0\n",
+       "2440  chunk   873.0\n",
+       "2466  whiff   583.0\n",
        "\n",
        "[238 rows x 2 columns]"
       ]
@@ -806,29 +806,19 @@
      "text": [
       "strongest suggestions\n",
       "       word   value\n",
-      "835   slate  1569.0\n",
-      "1593  share  1549.0\n",
-      "425   sauce  1542.0\n",
+      "2115  slate  1569.0\n",
+      "1501  share  1549.0\n",
+      "1642  sauce  1542.0\n",
       "initial guess\n",
       "1\n",
       "from the results of the last guess\n",
       "next best option is crony\n",
       "your top remaiing options are: \n",
-      "     word  value\n",
-      "2   picky  859.0\n",
-      "21  prior  961.0\n",
-      "23  foggy  970.0\n",
-      "2\n",
-      "from the results of the last guess\n",
-      "next best option is brick\n",
-      "your top remaiing options are: \n",
       "       word   value\n",
-      "363   prick   967.0\n",
-      "1154  crimp   894.0\n",
-      "1292  brick  1012.0\n",
-      "3\n",
-      "e message\n",
-      "4\n"
+      "1565  crony  1308.0\n",
+      "2147  briny  1296.0\n",
+      "15    corny  1282.0\n",
+      "2\n"
      ]
     },
     {
@@ -838,7 +828,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [26]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mround\u001b[39m \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m---> 20\u001b[0m     not_char \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43menter eliminated letters:[l,e,t,t,e,r]\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     21\u001b[0m     is_char \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124menter confirmed letters:[y,e,s]\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     22\u001b[0m     loc_letters \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124menter confirmed locations: [letter,location]\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Input \u001b[0;32mIn [26]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mround\u001b[39m \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m     20\u001b[0m     not_char \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124menter eliminated letters:[l,e,t,t,e,r]\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 21\u001b[0m     is_char \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43menter confirmed letters:[y,e,s]\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     22\u001b[0m     loc_letters \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124menter confirmed locations: [letter,location]\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     24\u001b[0m     \u001b[38;5;66;03m# eliminate options, and show the reduced best 5 choices\u001b[39;00m\n",
       "File \u001b[0;32m~/.local/share/virtualenvs/wordletron2000-9JAwi6tr/lib/python3.10/site-packages/ipykernel/kernelbase.py:1044\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1040\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_allow_stdin:\n\u001b[1;32m   1041\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(\n\u001b[1;32m   1042\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1043\u001b[0m     )\n\u001b[0;32m-> 1044\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1045\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1046\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent_ident\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1047\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1048\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m   1049\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/.local/share/virtualenvs/wordletron2000-9JAwi6tr/lib/python3.10/site-packages/ipykernel/kernelbase.py:1089\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1086\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m   1087\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m   1088\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[0;32m-> 1089\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m   1090\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[1;32m   1091\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
@@ -865,6 +855,8 @@
     "\n",
     "    if round > 1:\n",
     "\n",
+    "        print(str(round))\n",
+    "\n",
     "        not_char = input('enter eliminated letters:[l,e,t,t,e,r]')\n",
     "        is_char = input('enter confirmed letters:[y,e,s]')\n",
     "        loc_letters = input('enter confirmed locations: [letter,location]')\n",
@@ -886,7 +878,7 @@
     "            print('from the results of the last guess')\n",
     "            print('next best option is ' + str(next_best))\n",
     "            print('your top remaiing options are: ')\n",
-    "            print(df_options.head(3))\n",
+    "            print(df_options.nlargest(3, 'value'))\n",
     "        except:\n",
     "            print('e message')\n",
     "            pass\n",
